--- a/src/components/landscape/SectionLandscapeCentered/SectionLandscapeCentered.css
+++ b/src/components/landscape/SectionLandscapeCentered/SectionLandscapeCentered.css
@@ -60,6 +60,9 @@
     width: 50%;
     /* border: 1px solid black; */
     padding: 2%;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
 }
 
 
