--- a/src/components/landscape/SectionLandscapeTop/SectionLandscapeTop.css
+++ b/src/components/landscape/SectionLandscapeTop/SectionLandscapeTop.css
@@ -49,6 +49,9 @@
     width: 50%;
     /* border: 1px solid black; */
     padding: 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .sectionLandscapeTop > .content > .right > .imageDiv > img{
