--- a/src/components/portrait/SectionPortraitTop/SectionPortraitTop.css
+++ b/src/components/portrait/SectionPortraitTop/SectionPortraitTop.css
@@ -53,7 +53,9 @@
 }
 
 .sectionPortraitTop > .content > div > .imageDiv >img{
-    height: 90%;
+    /* height: 90%; */
+    max-width: 100vw;
+    min-width: 366px;
 }
 
 
