--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
 h1{
   margin:0;
   padding: 0;
-  font-size: 28px;
+  font-size: 26px;
   line-height: 1.2; 
 }
 
@@ -73,7 +73,7 @@ a:hover{
   color: var(--light-color);
 }
 
-button {
+.linkButton {
   display: inline-block;
   border: none;
   text-decoration: none;
@@ -90,23 +90,23 @@ button {
   -moz-appearance: none;
 }
 
-button:hover,
-button:focus {
+.linkButton:hover,
+.linkButton:focus {
   background: var(--dark-color);
   color: var(--light-color)
 }
 
-button:focus{
+.linkButton:focus{
   outline: 1px solid --light-color;
   outline-offset: -4px;
 }
 
-button:disabled {
+.linkButton:disabled {
   background: var(--main-color);
   color: var(--dark-color);
   cursor: unset;
 }
 
-button:active {
+.linkButton:active {
   transform: scale(0.99);
 }
